--- a/projects/music.html
+++ b/projects/music.html
@@ -21,12 +21,23 @@
 
         <br>
         <div class="name">
+            <h2>AC/DC</h2>
+            <div class="intro" style="color: black; text-align: left;">
+                     Craziest live concert I've ever seen! (on Youtube though) The drums in AC/DC's music are just insanely awesome.
+            </div>
+            <br>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/RHpClGAAvpg?si=lNakN3DwNP4YlI2G" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+
+        <br>
+        <div class="name">
             <h2>Jakob Dylan</h2>
         </div>
         <div class="intro">
-            <A> During my high school years, I happened to come across Jakob Dylan's songs, and ever since then, I've revisited his music from time to time.
-                His captivating voice and the western musical style have consistently enthralled me, always bringing me to the imagery of sunny days, azure skies,
-                golden leaves, and the slight chill of autumn. Perhaps it's because my first encounter with his songs took place during that autumn.
+            <A>
+                In my high school days, I stumbled upon Jakob Dylan's tunes, and since then, I've been going back to his music now and then. His mesmerizing
+                voice and that western musical vibe just get me every time, conjuring up images of sunny days, clear blue skies, golden leaves, and that subtle
+                autumn chill. Maybe it's because I first heard his songs during that fall season.
 
             </A>
         </div>
