--- a/projects/music.html
+++ b/projects/music.html
@@ -23,7 +23,7 @@
         <div class="name">
             <h2>AC/DC</h2>
             <div class="intro" style="color: black; text-align: left;">
-                     Craziest live concert I've ever seen! (on Youtube though) The drums in AC/DC's music are just insanely awesome.
+                     Craziest live concert I've ever seen! (on Youtube though) The drums in AC/DC's music are just awesome.
             </div>
             <br>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/RHpClGAAvpg?si=lNakN3DwNP4YlI2G" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
