--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div class="content">
 		<div class="container">
   <div class="image">
-<!--    <img src="./images/jialian.jpg">-->
-	  <img src="./images/jialian2.jpg" style="width: 100%">
+	  <img src="./images/jialian.jpg" style="width: 70%">
 
   </div>
   <div class="text">
