--- a/index.html
+++ b/index.html
@@ -71,9 +71,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     			<h3>Jialian Wu (<font face="KaiTi">吴嘉濂</font>)</h3>
 			<br>
 			<p>
-				Machine Learning Researcher
+				Computer Vision Researcher
 				<br>
 				Qualcomm AI Research, San Diego, CA
+				<br>
+				Email: jialianw at buffalo dot edu
 			</p>
 			<p style="padding: 10px 0px 0px 0px;">
 <!--				<a target="_blank" href="https://scholar.google.com/citations?user=RHOcEtsAAAAJ&hl=en"><img src="./images/gscholar.png" title="name" style="width:5%"/></a>-->
@@ -107,12 +109,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			</div>
 			<div class="grid3-content">
 					<ul class="graid3-ul" style="list-style-type:none">
-						I am a Machine Learning Researcher at Qualcomm AI Research. I received my Ph.D. degree in Computer Science and Engineering from State University of New York at Buffalo (UB) in 2023, advised by Prof. <a href="https://cse.buffalo.edu/~jsyuan/index.html">Junsong Yuan</a>.
+						I am a Computer Vision Researcher at Qualcomm AI Research. I received my Ph.D. degree in Computer Science and Engineering from State University of New York at Buffalo (UB) in 2023, advised by Prof. <a href="https://cse.buffalo.edu/~jsyuan/index.html">Junsong Yuan</a>.
 						Before that, I got B.Eng. from Tianjin University in 2018.
 <!--						, where I continued one-year M.Eng. study and left for UB before finishing the degree.-->
 						I received the <a href="https://engineering.buffalo.edu/computer-science-engineering/people/hall-of-fame/students/cse-graduate-student-award-recipients.html">Best Graduate Research Award</a> and
 						<a href="https://engineering.buffalo.edu/computer-science-engineering/people/hall-of-fame/students/cse-graduate-student-award-recipients.html">Best First Year Achiever Award</a> from the CSE department of UB.
-						My previous research experience lies in object understanding in videos and images including detection, segmentation, and tracking; open-set object understanding with vision and language.
+						My research interest is multimodal vision and language understanding in images and videos.
 
 					</ul>
 			</div>
@@ -420,7 +422,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<li class="graid3-li">
 						Conference Reviewer:
 						<br>
-						CVPR 2020/2021/2022/2024, ICLR 2024, NeurIPS 2023, ICCV 2021/2023, ECCV 2022, AAAI 2021/2022/2023, IJCAI 2021/2022, WACV 2021/2022, ICPR 2022, ACCV 2020
+						CVPR 2020/2021/2022/2024, ICLR 2024, ICML 2024, NeurIPS 2023, ICCV 2021/2023, ECCV 2022, AAAI 2021/2022/2023, etc
 					</li>
 					<li class="graid3-li">
 						Journal Reviewer:
