--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			</p>
 	  <p style="padding: 10px 0px 0px 0px;">
 <!--		  [<a href="./resume/Resume-jialianwu.pdf">Curriculum Vitae</a>]-->
-		  [<a href="https://scholar.google.com/citations?user=8FpPdYgAAAAJ&hl=en">Google Scholar</a>]
+		  [<a href="https://scholar.google.com/citations?user=6Abc8OgAAAAJ&hl=en&oi=ao">Google Scholar</a>]
 	  </p>
 <!--	  <p style="color:red">-->
 <!--		  I'm looking for full-time industry positions starting from Summer 2023.-->
