--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<div class="div2">
 							Research Intern, Microsoft, Redmond, WA
 						<br>
-						<b>Project: Open-set Object Understanding with Vision and Language</b>
+						<b>Project: Multimodal Object Understanding with Natural Language</b>
 						<br>
 						<em>May-August, 2022.</em> Work with Dr. <a href="https://amsword.github.io/">Jianfeng Wang</a>, Dr. <a href="https://zhegan27.github.io/">Zhe Gan</a>, <br> Dr. <a href="https://www.microsoft.com/en-us/research/people/lijuanw/">Lijuan Wang</a>, Dr. <a href="https://zyang-ur.github.io//">Zhengyuan Yang</a>, Dr. <a href="https://www.microsoft.com/en-us/research/people/zliu/">Zicheng Liu</a>.
 						</div>
@@ -422,7 +422,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<li class="graid3-li">
 						Conference Reviewer:
 						<br>
-						CVPR 2020/2021/2022/2024, ICLR 2024, ICML 2024, NeurIPS 2023, ICCV 2021/2023, ECCV 2022, AAAI 2021/2022/2023, etc
+						CVPR 2020/2021/2022/2024, ICLR 2024, ICML 2024, NeurIPS 2023, ICCV 2021/2023, ECCV 2022/2024, AAAI 2021/2022/2023, etc
 					</li>
 					<li class="graid3-li">
 						Journal Reviewer:
