--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!--					<li id="Me" class="active" onclick="func('Me')"><a href="#me" class="scroll">Me</a></li>-->
 					<li id="Education" onclick="func('Education')"><a href="#education" class="scroll">Bio</a></li>
 					<li id="Publication" onclick="func('Publication')"><a href="#publication" class="scroll">Research</a></li>
-					<li id="Experience" onclick="func('Experience')"><a href="#experience" class="scroll">Internships</a></li>
+					<li id="Experience" onclick="func('Experience')"><a href="#experience" class="scroll">Employments</a></li>
 					<li id="Professional_Services" onclick="func('Professional Services')"><a href="#Professional_Services" class="scroll">Professional Services</a></li>
 <!--					<li id="Activity" onclick="func('Activity')"><a href="#activity" class="scroll">Activity</a></li>-->
 					<!-- <li id="Contact" onclick="func('Contact')"><a href="#contact" class="scroll">Contact</a></li> -->
@@ -71,9 +71,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     			<h3>Jialian Wu (<font face="KaiTi">吴嘉濂</font>)</h3>
 			<br>
 			<p>
-				Computer Vision Researcher
+				Applied Research Scientist
 				<br>
-				Qualcomm AI Research, San Diego, CA
+				AMD GenAI, Bellevue, WA
 				<br>
 				Email: jialianw at buffalo dot edu
 			</p>
@@ -109,12 +109,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			</div>
 			<div class="grid3-content">
 					<ul class="graid3-ul" style="list-style-type:none">
-						I am a Computer Vision Researcher at Qualcomm AI Research. I received my Ph.D. degree in Computer Science and Engineering from State University of New York at Buffalo (UB) in 2023, advised by Prof. <a href="https://cse.buffalo.edu/~jsyuan/index.html">Junsong Yuan</a>.
+						I am an Applied Research Scientist at AMD working on GenAI. I received my Ph.D. degree in Computer Science and Engineering from State University of New York at Buffalo (UB) in 2023, advised by Prof. <a href="https://cse.buffalo.edu/~jsyuan/index.html">Junsong Yuan</a>.
 						Before that, I got B.Eng. from Tianjin University in 2018.
 <!--						, where I continued one-year M.Eng. study and left for UB before finishing the degree.-->
 						I received the <a href="https://engineering.buffalo.edu/computer-science-engineering/people/hall-of-fame/students/cse-graduate-student-award-recipients.html">Best Graduate Research Award</a> and
 						<a href="https://engineering.buffalo.edu/computer-science-engineering/people/hall-of-fame/students/cse-graduate-student-award-recipients.html">Best First Year Achiever Award</a> from the CSE department of UB.
-						My research interest is multimodal vision and language understanding in images and videos.
 
 					</ul>
 			</div>
@@ -311,27 +310,30 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 		<div class="grid3" id="experience" style="background:#ffffff">
 			<div class="grid3-header" id="experience">
-				<h3>Internships</h3>
+				<h3>Employments</h3>
 				<br/>
 			</div>
 			<div class="grid3-content">
 
 				<ul class="graid3">
-<!--					<li class="graid3-li2">-->
-<!--						<div class='col-xs-3'>-->
-<!--							<img class="paper-image" src="images/amazon-science-logo.svg" width="100" height="50" align="left">-->
-<!--						</div>-->
-<!--						Applied Scientist Intern, Amazon, Seattle, WA-->
-<!--						<br>-->
-<!--						<em>Fall, 2022.</em> Work with Dr. <a href="https://cs.stanford.edu/~taranlan/">Tian Lan</a> and Dr. <a href="https://sites.google.com/site/seraphlh/">Hui Liang</a>.-->
-<!--					</li>-->
+					<li class="graid3-li2">
+						<div class='div1'>
+							<img class="img" src="images/Qualcomm.png"  align="left">
+							<div class="div2">
+								Machine Learning Researcher, Qualcomm, San Diego, CA
+								<br>
+								<em>June 2023 - March 2024</em>
+							</div>
+						</div>
+					</li>
+					<br>
 					<li class="graid3-li2">
 						<div class='div1'>
 							<img class="img" src="images/amazon-science-logo.svg" width="100" height="50" align="left">
 							<div class="div2">
 							Applied Scientist Intern, Amazon, Seattle, WA
 						<br>
-						<em>Aug-Oct, 2022.</em> Work with Dr. <a href="https://cs.stanford.edu/~taranlan/">Tian Lan</a> and Dr. <a href="https://sites.google.com/site/seraphlh/">Hui Liang</a>.
+						<em>August - October, 2022.</em> Work with Dr. <a href="https://cs.stanford.edu/~taranlan/">Tian Lan</a> and Dr. <a href="https://sites.google.com/site/seraphlh/">Hui Liang</a>.
 							</div>
 						</div>
 					</li>
@@ -343,10 +345,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<div class="div2">
 							Research Intern, Microsoft, Redmond, WA
 						<br>
-						<b>Project: Multimodal Object Understanding with Natural Language</b>
-						<br>
 						<em>May-August, 2022.</em> Work with Dr. <a href="https://amsword.github.io/">Jianfeng Wang</a>, Dr. <a href="https://zhegan27.github.io/">Zhe Gan</a>, <br> Dr. <a href="https://www.microsoft.com/en-us/research/people/lijuanw/">Lijuan Wang</a>, Dr. <a href="https://zyang-ur.github.io//">Zhengyuan Yang</a>, Dr. <a href="https://www.microsoft.com/en-us/research/people/zliu/">Zicheng Liu</a>.
-						</div>
+								<br>
+								Project: Object Understanding with Natural Language
+							</div>
 						</div>
 					</li>
 
@@ -357,9 +359,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<div class="div2">
 						Applied Scientist Intern, Amazon, Seattle, WA
 						<br>
-						<b>Project: Video Instance Segmentation (CVPR'22)</b>
-						<br>
 						<em>May-August, 2021.</em> Work with Dr. <a href="https://cs.stanford.edu/~taranlan/">Tian Lan</a> and Dr. <a href="https://sites.google.com/site/seraphlh/">Hui Liang</a>.
+								<br>
+								Project: Video Instance Segmentation
 							</div>
 						</div>
 					</li>
@@ -389,16 +391,15 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class="div2">
 							Research Intern, Applied AI Lab, Cupertino, CA
 							<br>
-							<b>Project: Multi-Object Tracking (CVPR'21)</b>
-							<br>
 							<em>May-August, 2020.</em> Work with Dr. <a href="https://scholar.google.com/citations?user=uNj2w9gAAAAJ&hl=en">Yu Wang</a> and Dr. <a href="https://scholar.google.com/citations?user=uBHJx08AAAAJ&hl=en">Ming Yang</a>.
+							<br>
+							Project: Multi-Object Tracking
 							<br>
 							Research Intern, Beijing
 							<br>
-							<b>Project: Pedestrian Detection (MM'20, CVPR'20)</b>
-							<br>
 							<em>May 2018 - July 2019.</em> Work with Dr. <a href="https://scholar.google.com/citations?user=pCY-bikAAAAJ&hl=zh-CN">Qian Zhang</a> and Dr. <a href="https://scholar.google.com/citations?user=uBHJx08AAAAJ&hl=en">Ming Yang</a>.
-
+							<br>
+							Project: Pedestrian Detection
 						</div>
 					</div>
 					</li>
