--- a/index.html
+++ b/index.html
@@ -318,6 +318,17 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<ul class="graid3">
 					<li class="graid3-li2">
 						<div class='div1'>
+							<img class="img" src="images/amd.png"  align="left">
+							<div class="div2">
+								Applied Research Scientist, AMD, Bellevue, WA
+								<br>
+								<em>April 2024 - Present</em>
+							</div>
+						</div>
+					</li>
+					<br>
+					<li class="graid3-li2">
+						<div class='div1'>
 							<img class="img" src="images/Qualcomm.png"  align="left">
 							<div class="div2">
 								Machine Learning Researcher, Qualcomm, San Diego, CA
