--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     			<h3>Jialian Wu (<font face="KaiTi">吴嘉濂</font>)</h3>
 			<br>
 			<p>
-				Applied Research Scientist
+				Researcher @ AMD GenAI
 				<br>
-				AMD GenAI, Bellevue, WA
+				Bellevue, WA
 				<br>
 				Email: jialianw at buffalo dot edu
 			</p>
@@ -85,7 +85,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!--				[<a href="https://drive.google.com/file/d/1sNRUbglGHZbQ1UEmP5DOuuHgj0Glq1X6/view?usp=sharing">Curriculum Vitae</a>]-->
 <!--				[<a href="https://scholar.google.com/citations?user=8FpPdYgAAAAJ&hl=en">Google Scholar</a>]-->
 			</p>
-	  <p style="padding: 10px 0px 0px 0px;">
+	  <p style="padding: 0px 0px 0px 0px;">
 <!--		  [<a href="./resume/Resume-jialianwu.pdf">Curriculum Vitae</a>]-->
 		  [<a href="https://scholar.google.com/citations?user=6Abc8OgAAAAJ&hl=en&oi=ao">Google Scholar</a>]
 	  </p>
@@ -109,7 +109,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			</div>
 			<div class="grid3-content">
 					<ul class="graid3-ul" style="list-style-type:none">
-						I am an Applied Research Scientist at AMD working on GenAI. I received my Ph.D. degree in Computer Science and Engineering from State University of New York at Buffalo (UB) in 2023, advised by Prof. <a href="https://cse.buffalo.edu/~jsyuan/index.html">Junsong Yuan</a>.
+						I am a Researcher at AMD working on LLM. I received my Ph.D. degree in Computer Science and Engineering from State University of New York at Buffalo (UB) in 2023, advised by Prof. <a href="https://cse.buffalo.edu/~jsyuan/index.html">Junsong Yuan</a>.
 						Before that, I got B.Eng. from Tianjin University in 2018.
 <!--						, where I continued one-year M.Eng. study and left for UB before finishing the degree.-->
 						I received the <a href="https://engineering.buffalo.edu/computer-science-engineering/people/hall-of-fame/students/cse-graduate-student-award-recipients.html">Best Graduate Research Award</a> and
@@ -408,7 +408,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<br>
 							Research Intern, Beijing
 							<br>
-							<em>May 2018 - July 2019.</em> Work with Dr. <a href="https://scholar.google.com/citations?user=pCY-bikAAAAJ&hl=zh-CN">Qian Zhang</a> and Dr. <a href="https://scholar.google.com/citations?user=uBHJx08AAAAJ&hl=en">Ming Yang</a>.
+							<em>05/2018 - 07/2019.</em> Work with Dr. <a href="https://scholar.google.com/citations?user=pCY-bikAAAAJ&hl=zh-CN">Qian Zhang</a> and Dr. <a href="https://scholar.google.com/citations?user=uBHJx08AAAAJ&hl=en">Ming Yang</a>.
 							<br>
 							Project: Pedestrian Detection
 						</div>
