--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<br>
 				Bellevue, WA
 				<br>
-				Email: jialianw at buffalo dot edu
+				Email: Jialian.Wu at amd dot com
 			</p>
 			<p style="padding: 10px 0px 0px 0px;">
 <!--				<a target="_blank" href="https://scholar.google.com/citations?user=RHOcEtsAAAAJ&hl=en"><img src="./images/gscholar.png" title="name" style="width:5%"/></a>-->
@@ -89,9 +89,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!--		  [<a href="./resume/Resume-jialianwu.pdf">Curriculum Vitae</a>]-->
 		  [<a href="https://scholar.google.com/citations?user=6Abc8OgAAAAJ&hl=en&oi=ao">Google Scholar</a>]
 	  </p>
-<!--	  <p style="color:red">-->
-<!--		  I'm looking for full-time industry positions starting from Summer 2023.-->
-<!--	  </p>-->
+	  <br>
+	  <p style="font-size:19px;">
+		  We're hiring research interns in LLM/Multimodla LLM/Image and Video Generation related topics. The aim is to publish papers at top conferences. Feel free to drop me an email with your CV if interested.
+	  </p>
   </div>
 </div>
 
@@ -135,7 +136,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class='col-xs-9'>
 						<div class='paper-title'>GRiT: A Generative Region-to-text Transformer for Object Understanding</div>
 						<div class='paper-authors'><b>Jialian Wu</b>, Jianfeng Wang, Zhengyuan Yang, Zhe Gan, Zicheng Liu, Junsong Yuan, and Lijuan Wang</div>
-						<div class='paper-venue'>ArXiv Preprint, 2022</div>
+						<div class='paper-venue'>European Conference on Computer Vision (<b>ECCV</b>), 2024</div>
 						<div class='paper-link'>
 							<a class="btn btn-confirm" target="_blank" href="https://arxiv.org/pdf/2212.00280.pdf">PDF</a>
 							<a class="btn btn-confirm" target="_blank" href="https://github.com/JialianW/GRiT">Code</a>
@@ -195,7 +196,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</div>
 				</div>
 
-				<div class='row publication-entity'>
+				<!-- <div class='row publication-entity'>
 					<div class='col-xs-3'>
 						<img class="paper-image" src="images/tmm21.png" width="200" height="130">
 					</div>
@@ -208,10 +209,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<a class="btn btn-confirm" target="_blank" href="https://github.com/JialianW/Forest_RCNN">Code</a>
 							<!-- Place this tag where you want the button to render. -->
 <!--							<a class="github-button" href="https://github.com/JialianW/Forest_RCNN" data-color-scheme="no-preference: light; light: light; dark: light;" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star JialianW/Forest_RCNN on GitHub">Star</a>-->
-							<iframe src="https://ghbtns.com/github-btn.html?user=JialianW&repo=Forest_RCNN&type=star&count=true&size=large" frameborder="0" scrolling="0" width="170" height="30" title="GitHub"></iframe>
+							<!-- <iframe src="https://ghbtns.com/github-btn.html?user=JialianW&repo=Forest_RCNN&type=star&count=true&size=large" frameborder="0" scrolling="0" width="170" height="30" title="GitHub"></iframe>
 						</div>
 					</div>
-				</div>
+				</div> --> -->
 
 				<div class='row publication-entity'>
 					<div class='col-xs-3'>
@@ -236,6 +237,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					  <div class='paper-title'>Forest R-CNN: Large-Vocabulary Long-Tailed Object Detection and Instance Segmentation</div>
 					  <div class='paper-authors'><b>Jialian Wu</b>, Liangchen Song, Tiancai Wang, Qian Zhang, and Junsong Yuan</div>
 					  <div class='paper-venue'>ACM International Conference on Multimedia (<b>ACM MM</b>), 2020.</div>
+					  <div class='paper-venue'>IEEE Transactions on Multimedia, 2021.</div> 
 					  <div class='paper-link'>
 						<a class="btn btn-confirm" target="_blank" href="https://arxiv.org/pdf/2008.05676v2.pdf">PDF</a>
 						<a class="btn btn-confirm" target="_blank" href="https://github.com/JialianW/Forest_RCNN">Code</a>
