--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	  </p>
 	  <br>
 	  <p style="font-size:19px;">
-		  We're hiring research interns in LLM/Multimodla LLM/Image and Video Generation related topics. The aim is to publish papers at top conferences. Feel free to drop me an email with your CV if interested.
+		  We're hiring research interns in LLM/Multimodal LLM/Image and Video Generation related topics. The aim is to publish papers at top conferences. Feel free to drop me an email with your CV if interested.
 	  </p>
   </div>
 </div>
