--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<li class="graid3-li">
 						Conference Reviewer:
 						<br>
-						CVPR 2020/2021/2022/2024, ICLR 2024, ICML 2024, NeurIPS 2023, ICCV 2021/2023, ECCV 2022/2024, AAAI 2021/2022/2023, etc
+						CVPR 20'21'22'24'25, ICLR 24'25, ICML 24, NeurIPS 23, ICCV 21'23, ECCV 22'24, AAAI 21'22'23, etc
 					</li>
 					<li class="graid3-li">
 						Journal Reviewer:
