--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	  </p>
 	  <br>
 	  <p style="font-size:19px;">
-		  We're hiring research interns in LLM/Multimodal LLM/Image and Video Generation related topics. The aim is to publish papers at top conferences. Feel free to drop me an email with your CV if interested.
+		  We're hiring research interns in LLM/Multimodal LLM/Image and Video Generation related topics. Feel free to contact me if interested.
 	  </p>
   </div>
 </div>
@@ -111,10 +111,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="grid3-content">
 					<ul class="graid3-ul" style="list-style-type:none">
 						I am a Researcher at AMD working on LLM. I received my Ph.D. degree in Computer Science and Engineering from State University of New York at Buffalo (UB) in 2023, advised by Prof. <a href="https://cse.buffalo.edu/~jsyuan/index.html">Junsong Yuan</a>.
-						Before that, I got B.Eng. from Tianjin University in 2018.
-<!--						, where I continued one-year M.Eng. study and left for UB before finishing the degree.-->
-						I received the <a href="https://engineering.buffalo.edu/computer-science-engineering/people/hall-of-fame/students/cse-graduate-student-award-recipients.html">Best Graduate Research Award</a> and
-						<a href="https://engineering.buffalo.edu/computer-science-engineering/people/hall-of-fame/students/cse-graduate-student-award-recipients.html">Best First Year Achiever Award</a> from the CSE department of UB.
+						Before that, I got B.Eng. from Tianjin University in 2018. I received the Best Graduate Research Award and Best First Year Achiever Award from the CSE department of UB.
 
 					</ul>
 			</div>
@@ -436,7 +433,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<li class="graid3-li">
 						Conference Reviewer:
 						<br>
-						CVPR 20'21'22'24'25, ICLR 24'25, ICML 24, NeurIPS 23, ICCV 21'23, ECCV 22'24, AAAI 21'22'23, etc
+						CVPR 20'21'22'24'25, ICLR 24'25, ICML 24'25, NeurIPS 23, ICCV 21'23, ECCV 22'24, AAAI 21'22'23, etc
 					</li>
 					<li class="graid3-li">
 						Journal Reviewer:
