--- a/index.html
+++ b/index.html
@@ -30,13 +30,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<!---start-top-nav--->
 			<div class="top-nav">
 				<ul>
-<!--					<li id="Me" class="active" onclick="func('Me')"><a href="#me" class="scroll">Me</a></li>-->
 					<li id="Education" onclick="func('Education')"><a href="#education" class="scroll">Bio</a></li>
 					<li id="Publication" onclick="func('Publication')"><a href="#publication" class="scroll">Research</a></li>
 					<li id="Experience" onclick="func('Experience')"><a href="#experience" class="scroll">Employments</a></li>
 					<li id="Professional_Services" onclick="func('Professional Services')"><a href="#Professional_Services" class="scroll">Professional Services</a></li>
-<!--					<li id="Activity" onclick="func('Activity')"><a href="#activity" class="scroll">Activity</a></li>-->
-					<!-- <li id="Contact" onclick="func('Contact')"><a href="#contact" class="scroll">Contact</a></li> -->
 				</ul>
 			</div>
 			<div class="clear"> </div>
@@ -78,15 +75,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				Email: Jialian.Wu at amd dot com
 			</p>
 			<p style="padding: 10px 0px 0px 0px;">
-<!--				<a target="_blank" href="https://scholar.google.com/citations?user=RHOcEtsAAAAJ&hl=en"><img src="./images/gscholar.png" title="name" style="width:5%"/></a>-->
-<!--				<a target="_blank" href="https://github.com/chenwydj"><img src="./images/github.png" title="name" style="width:5%"/></a>-->
-				<!-- <a target="_blank" href="mailto:wuyang.chen@tamu.edu"><img src="./images/email.png" title="name" style="width:5%"/></a> -->
 				[<a href="./resume/Resume_Jialian_Wu.pdf">Resume</a>] [<a href="https://github.com/JialianW">Github</a>] [<a href="https://www.linkedin.com/in/jialian-wu-0bb173162">Linkedin</a>]
-<!--				[<a href="https://drive.google.com/file/d/1sNRUbglGHZbQ1UEmP5DOuuHgj0Glq1X6/view?usp=sharing">Curriculum Vitae</a>]-->
-<!--				[<a href="https://scholar.google.com/citations?user=8FpPdYgAAAAJ&hl=en">Google Scholar</a>]-->
 			</p>
 	  <p style="padding: 0px 0px 0px 0px;">
-<!--		  [<a href="./resume/Resume-jialianwu.pdf">Curriculum Vitae</a>]-->
 		  [<a href="https://scholar.google.com/citations?user=6Abc8OgAAAAJ&hl=en&oi=ao">Google Scholar</a>]
 	  </p>
 	  <br>
@@ -99,9 +90,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 
 
-<!--		<embed src="C:\\CloudMusic\\demo.mp3" hidden="false" autostart="true" loop="true"><\embed>-->
-
-<!--		<div class="grid3" id="music">-->
 
 		<div class="grid3" id="education">
 			<div class="grid3-header">
@@ -128,6 +116,22 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 				<div class='row publication-entity'>
 					<div class='col-xs-3'>
+						<img class="paper-image" style="width: 100%" src="images/AgentLab.png" >
+					</div>
+					<div class='col-xs-9'>
+						<div class='paper-title'>Agent Laboratory: Using LLM Agents as Research Assistants</div>
+						<div class='paper-authors'>Samuel Schmidgall, Yusheng Su, Ze Wang, Ximeng Sun, <b>Jialian Wu</b>, Xiaodong Yu, Jiang Liu, Zicheng Liu, and Emad Barsoum</div>
+						<div class='paper-venue'>arXiv preprint, 2025</div>
+						<div class='paper-link'>
+							<a class="btn btn-confirm" target="_blank" href="https://arxiv.org/pdf/2501.04227">PDF</a>
+							<a class="btn btn-confirm" target="_blank" href="https://github.com/SamuelSchmidgall/AgentLaboratory">Code</a>
+							<a class="btn btn-confirm" target="_blank" href="https://agentlaboratory.github.io/">Project page</a>
+						</div>
+					</div>
+				</div>
+
+				<div class='row publication-entity'>
+					<div class='col-xs-3'>
 						<img class="paper-image" style="width: 100%" src="images/GRiT2.png" >
 					</div>
 					<div class='col-xs-9'>
@@ -139,9 +143,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<a class="btn btn-confirm" target="_blank" href="https://github.com/JialianW/GRiT">Code</a>
 							<iframe src="https://ghbtns.com/github-btn.html?user=JialianW&repo=GRiT&type=star&count=true&size=large" frameborder="0" scrolling="0" width="170" height="30" title="GitHub"></iframe>
 						</div>
-<!--						<div class='paper-description'>Our new work, GRiT, is a general and open-set object understanding framework that localizes objects and-->
-<!--							can generate any style of free-form texts it was trained with to describe objects, e.g., class names, descriptive sentences (including object-->
-<!--							attributes, actions, etc). GRiT can be applied in various region/object-level tasks, e.g., object detection, object captioning.</div>-->
 					</div>
 				</div>
 
@@ -155,17 +156,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class='paper-authors'><b>Jialian Wu</b>, Sudhir Yarram, Hui Liang, Tian Lan, Junsong Yuan, Jayan Eledath, and Gerard Medioni</div>
 						<div class='paper-venue'>IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2022</div>
 						<div class='paper-link'>
-<!--							<a class="btn btn-confirm" target="_blank" href="projects/TraDeS.html">Project page</a>-->
 							<a class="btn btn-confirm" target="_blank" href="projects/EfficientVIS.html">Project page</a>
 							<a class="btn btn-confirm" target="_blank" href="https://youtu.be/sSPMzgtMKCE">Video</a>
 							<a class="btn btn-confirm" target="_blank" href="https://openaccess.thecvf.com/content/CVPR2022/papers/Wu_Efficient_Video_Instance_Segmentation_via_Tracklet_Query_and_Proposal_CVPR_2022_paper.pdf">PDF</a>
-<!--							<a class="btn btn-confirm" target="_blank" href="">Code (Coming)</a>-->
-<!--							<a class="btn btn-confirm" target="_blank" href="https://github.com/JialianW/TraDeS">Code</a>-->
-							<!-- Place this tag where you want the button to render. -->
-							<!-- Place this tag where you want the button to render. -->
-							<!-- Place this tag where you want the button to render. -->
-<!--							<a class="github-button" href="https://github.com/JialianW/TraDeS" data-color-scheme="no-preference: light; light: light; dark: light;" style="padding: 0px 0px 40px 0px;" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star JialianW/TraDeS on GitHub">Star</a>-->
-							<!--							<a class="btn btn-confirm" target="_blank" href="https://openaccess.thecvf.com/content_CVPR_2020/supplemental/Wu_Temporal-Context_Enhanced_Detection_CVPR_2020_supplemental.pdf">supp</a>-->
 						</div>
 					</div>
 				</div>
@@ -183,83 +176,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<a class="btn btn-confirm" target="_blank" href="https://www.youtube.com/watch?v=oGNtSFHRZJA">Video</a>
 							<a class="btn btn-confirm" target="_blank" href="https://openaccess.thecvf.com/content/CVPR2021/papers/Wu_Track_To_Detect_and_Segment_An_Online_Multi-Object_Tracker_CVPR_2021_paper.pdf">PDF</a>
 							<a class="btn btn-confirm" target="_blank" href="https://github.com/JialianW/TraDeS">Code</a>
-							<!-- Place this tag where you want the button to render. -->
-							<!-- Place this tag where you want the button to render. -->
-							<!-- Place this tag where you want the button to render. -->
-<!--							<a class="github-button" href="https://github.com/JialianW/TraDeS" data-color-scheme="no-preference: light; light: light; dark: light;" style="padding: 0px 0px 40px 0px;" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star JialianW/TraDeS on GitHub">Star</a>-->
-<!--							<a class="btn btn-confirm" target="_blank" href="https://openaccess.thecvf.com/content_CVPR_2020/supplemental/Wu_Temporal-Context_Enhanced_Detection_CVPR_2020_supplemental.pdf">supp</a>-->
 							<iframe src="https://ghbtns.com/github-btn.html?user=JialianW&repo=TraDeS&type=star&count=true&size=large" frameborder="0" scrolling="0" width="170" height="30" title="GitHub"></iframe>
 						</div>
 					</div>
 				</div>
 
-				<!-- <div class='row publication-entity'>
-					<div class='col-xs-3'>
-						<img class="paper-image" src="images/tmm21.png" width="200" height="130">
-					</div>
-					<div class='col-xs-9'>
-						<div class='paper-title'>ForestDet: Large-Vocabulary Long-Tailed Object Detection and Instance Segmentation</div>
-						<div class='paper-authors'><b>Jialian Wu</b>, Liangchen Song, Qian Zhang, Ming Yang, and Junsong Yuan</div>
-						<div class='paper-venue'>IEEE Transactions on Multimedia (<b>TMM</b>), 2021. (Extension of MM'20)</div>
-						<div class='paper-link'>
-							<a class="btn btn-confirm" target="_blank" href="https://ieeexplore.ieee.org/abstract/document/9520281">PDF</a>
-							<a class="btn btn-confirm" target="_blank" href="https://github.com/JialianW/Forest_RCNN">Code</a>
-							<!-- Place this tag where you want the button to render. -->
-<!--							<a class="github-button" href="https://github.com/JialianW/Forest_RCNN" data-color-scheme="no-preference: light; light: light; dark: light;" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star JialianW/Forest_RCNN on GitHub">Star</a>-->
-							<!-- <iframe src="https://ghbtns.com/github-btn.html?user=JialianW&repo=Forest_RCNN&type=star&count=true&size=large" frameborder="0" scrolling="0" width="170" height="30" title="GitHub"></iframe>
-						</div>
-					</div>
-				</div> --> -->
-
-				<div class='row publication-entity'>
-					<div class='col-xs-3'>
-					  <img class="paper-image" src="images/cvpr20.png">
-					</div>
-					<div class='col-xs-9'>
-					  <div class='paper-title'>Temporal-Context Enhanced Detection of Heavily Occluded Pedestrians</div>
-					  <div class='paper-authors'><b>Jialian Wu</b>, Chunluan Zhou, Ming Yang, Qian Zhang, Yuan Li, and Junsong Yuan</div>
-					  <div class='paper-venue'>IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2020.</div>
-					  <div class='paper-link'>
-						<a class="btn btn-confirm" target="_blank" href="https://openaccess.thecvf.com/content_CVPR_2020/papers/Wu_Temporal-Context_Enhanced_Detection_of_Heavily_Occluded_Pedestrians_CVPR_2020_paper.pdf">PDF</a>
-						<a class="btn btn-confirm" target="_blank" href="https://openaccess.thecvf.com/content_CVPR_2020/supplemental/Wu_Temporal-Context_Enhanced_Detection_CVPR_2020_supplemental.pdf">Supp</a>
-					  </div>
-					</div>
-				</div>
-
-				<div class='row publication-entity'>
-					<div class='col-xs-3'>
-					  <img class="paper-image" src="images/Forest_Rcnn.png">
-					</div>
-					<div class='col-xs-9'>
-					  <div class='paper-title'>Forest R-CNN: Large-Vocabulary Long-Tailed Object Detection and Instance Segmentation</div>
-					  <div class='paper-authors'><b>Jialian Wu</b>, Liangchen Song, Tiancai Wang, Qian Zhang, and Junsong Yuan</div>
-					  <div class='paper-venue'>ACM International Conference on Multimedia (<b>ACM MM</b>), 2020.</div>
-					  <div class='paper-venue'>IEEE Transactions on Multimedia, 2021.</div> 
-					  <div class='paper-link'>
-						<a class="btn btn-confirm" target="_blank" href="https://arxiv.org/pdf/2008.05676v2.pdf">PDF</a>
-						<a class="btn btn-confirm" target="_blank" href="https://github.com/JialianW/Forest_RCNN">Code</a>
-						  <!-- Place this tag where you want the button to render. -->
-<!--						  <a class="github-button" href="https://github.com/JialianW/Forest_RCNN" data-color-scheme="no-preference: light; light: light; dark: light;" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star JialianW/Forest_RCNN on GitHub">Star</a>-->
-						  <iframe src="https://ghbtns.com/github-btn.html?user=JialianW&repo=Forest_RCNN&type=star&count=true&size=large" frameborder="0" scrolling="0" width="170" height="30" title="GitHub"></iframe>
-					  </div>
-					</div>
-				</div>
-
-				<div class='row publication-entity'>
-					<div class='col-xs-3'>
-					  <img class="paper-image" src="images/SML.png">
-					</div>
-					<div class='col-xs-9'>
-					  <div class='paper-title'>Self-Mimic Learning for Small-scale Pedestrian Detection</div>
-					  <div class='paper-authors'><b>Jialian Wu</b>, Chunluan Zhou, Qian Zhang, Ming Yang, and Junsong Yuan</div>
-					  <div class='paper-venue'>ACM International Conference on Multimedia (<b>ACM MM</b>), 2020.</div>
-					  <div class='paper-link'>
-						  <a class="btn btn-confirm" target="_blank" href="https://cse.buffalo.edu/~jsyuan/papers/2020/SML.pdf">PDF</a>
-						<a class="btn btn-confirm" target="_blank" href="https://cse.buffalo.edu/~jsyuan/papers/2020/SML_supp.pdf">Supp</a>
-					  </div>
-					</div>
-				</div>
-
+				
 
 				<div class='row publication-entity'>
 					<div class='col-xs-3'>
@@ -302,6 +224,54 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						</div>
 					</div>
 				</div>
+
+				<div class='row publication-entity'>
+					<div class='col-xs-3'>
+					  <img class="paper-image" src="images/cvpr20.png">
+					</div>
+					<div class='col-xs-9'>
+					  <div class='paper-title'>Temporal-Context Enhanced Detection of Heavily Occluded Pedestrians</div>
+					  <div class='paper-authors'><b>Jialian Wu</b>, Chunluan Zhou, Ming Yang, Qian Zhang, Yuan Li, and Junsong Yuan</div>
+					  <div class='paper-venue'>IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2020.</div>
+					  <div class='paper-link'>
+						<a class="btn btn-confirm" target="_blank" href="https://openaccess.thecvf.com/content_CVPR_2020/papers/Wu_Temporal-Context_Enhanced_Detection_of_Heavily_Occluded_Pedestrians_CVPR_2020_paper.pdf">PDF</a>
+						<a class="btn btn-confirm" target="_blank" href="https://openaccess.thecvf.com/content_CVPR_2020/supplemental/Wu_Temporal-Context_Enhanced_Detection_CVPR_2020_supplemental.pdf">Supp</a>
+					  </div>
+					</div>
+				</div>
+
+				<div class='row publication-entity'>
+					<div class='col-xs-3'>
+					  <img class="paper-image" src="images/Forest_Rcnn.png">
+					</div>
+					<div class='col-xs-9'>
+					  <div class='paper-title'>Forest R-CNN: Large-Vocabulary Long-Tailed Object Detection and Instance Segmentation</div>
+					  <div class='paper-authors'><b>Jialian Wu</b>, Liangchen Song, Tiancai Wang, Qian Zhang, and Junsong Yuan</div>
+					  <div class='paper-venue'>ACM International Conference on Multimedia (<b>ACM MM</b>), 2020.</div>
+					  <div class='paper-venue'>IEEE Transactions on Multimedia, 2021.</div> 
+					  <div class='paper-link'>
+						<a class="btn btn-confirm" target="_blank" href="https://arxiv.org/pdf/2008.05676v2.pdf">PDF</a>
+						<a class="btn btn-confirm" target="_blank" href="https://github.com/JialianW/Forest_RCNN">Code</a>
+						<iframe src="https://ghbtns.com/github-btn.html?user=JialianW&repo=Forest_RCNN&type=star&count=true&size=large" frameborder="0" scrolling="0" width="170" height="30" title="GitHub"></iframe>
+					  </div>
+					</div>
+				</div>
+
+				<div class='row publication-entity'>
+					<div class='col-xs-3'>
+					  <img class="paper-image" src="images/SML.png">
+					</div>
+					<div class='col-xs-9'>
+					  <div class='paper-title'>Self-Mimic Learning for Small-scale Pedestrian Detection</div>
+					  <div class='paper-authors'><b>Jialian Wu</b>, Chunluan Zhou, Qian Zhang, Ming Yang, and Junsong Yuan</div>
+					  <div class='paper-venue'>ACM International Conference on Multimedia (<b>ACM MM</b>), 2020.</div>
+					  <div class='paper-link'>
+						  <a class="btn btn-confirm" target="_blank" href="https://cse.buffalo.edu/~jsyuan/papers/2020/SML.pdf">PDF</a>
+						<a class="btn btn-confirm" target="_blank" href="https://cse.buffalo.edu/~jsyuan/papers/2020/SML_supp.pdf">Supp</a>
+					  </div>
+					</div>
+				</div>
+
 
 			</div>			
 		</div>
@@ -377,22 +347,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</li>
 
 					<br>
-<!--					<li class="graid3-li2">-->
-<!--						<div class='col-xs-3'>-->
-<!--							<img class="paper-image" src="images/horizon-robotics.png" align="left">-->
-<!--						</div>-->
-<!--						Research Intern, Applied AI Lab, Cupertino, CA-->
-<!--						<br>-->
-<!--						<b>Project: Multi-Object Tracking (CVPR'21)</b>-->
-<!--						<br>-->
-<!--						<em>May-August, 2020.</em> Work with Dr. <a href="https://scholar.google.com/citations?user=uNj2w9gAAAAJ&hl=en">Yu Wang</a> and Dr. <a href="https://scholar.google.com/citations?user=uBHJx08AAAAJ&hl=en">Ming Yang</a>.-->
-<!--						<br>-->
-<!--						Research Intern, Beijing-->
-<!--						<br>-->
-<!--						<b>Project: Pedestrian Detection (MM'20)</b>-->
-<!--						<br>-->
-<!--						<em>May-August, 2018.</em> Work with Dr. <a href="https://scholar.google.com/citations?user=pCY-bikAAAAJ&hl=zh-CN">Qian Zhang</a> and Dr. <a href="https://scholar.google.com/citations?user=uBHJx08AAAAJ&hl=en">Ming Yang</a>.-->
-<!--					</li>-->
 
 
 					<li class="graid3-li2">
@@ -453,13 +407,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<center>
 		<script type="text/javascript" id="clstr_globe" src="//cdn.clustrmaps.com/globe.js?&w=150&t=n&d=5_NGtk26dqmCmuXbnUDXFocM514zOxXJ7W6oUtc_RXU"></script>
 		</center>
-<!--						<img class="custom1" src="./images/image5crop.png">-->
 
 		<div class="footer" style="color:white;">
-<!--			The only way to live is by accepting each minute as an unrepeatable miracle-->
-<!--			Every man has two lives - the second starts when he realizes he has just one-->
-<!--		Music is a great passion of my life:) Favorite singers/bands/musicians: <a href="https://en.wikipedia.org/wiki/Jakob_Dylan">Jakob Dylan</a>, <a href="https://en.wikipedia.org/wiki/AC/DC">AC/DC</a>, <a href="https://en.wikipedia.org/wiki/The_Beatles">The Beatles</a>,-->
-<!--			<a href="https://ja.wikipedia.org/wiki/%E6%8A%BC%E5%B0%BE%E3%82%B3%E3%83%BC%E3%82%BF%E3%83%AD%E3%83%BC">Kotaro Oshio</a>, <a href="https://en.wikipedia.org/wiki/Coldplay">Coldplay</a>, <a href="https://en.wikipedia.org/wiki/The_Lumineers">The Lumineers</a>-->
 			Music is a great passion of my life:) My favorite music is <a href="projects/music.html">here</a>
 		</div>
 	</div>
@@ -470,7 +419,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<script type="text/javascript" src="js/jquery.prettyPhoto.js"></script>		
 		<script type="text/javascript" src="js/jquery.isotope.js"></script>	
 		<script type="text/javascript" src="js/main.js"></script>	
-		<!-- <a href="https://clustrmaps.com/site/1ar7z" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=K7jBF2yeoMiKWtCj5crj3IbNP7Ru3ZJt3lLwQL1HJ_E&cl=ffffff"></a> -->
 		<script type="text/javascript">
 		jQuery(document).ready(function($) {
 			$(".scroll").click(function(event){		
