--- a/index.html
+++ b/index.html
@@ -116,6 +116,24 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 				<div class='row publication-entity'>
 					<div class='col-xs-3'>
+						<img class="paper-image" style="width: 100%" src="images/Instella.png" >
+					</div>
+					<div class='col-xs-9'>
+						<div class='paper-title'>Instella: New State-of-the-art Fully Open 3B Language Models</div>
+						<div class='paper-authors'>Jiang Liu, <b>Jialian Wu</b>, Xiaodong Yu, Prakamya Mishra, 
+							Sudhanshu Ranjan, Zicheng Liu, et al.</div>
+						<div class='paper-venue'>tech blog, 2025</div>
+						<div class='paper-link'>
+							<a class="btn btn-confirm" target="_blank" href="https://rocm.blogs.amd.com/artificial-intelligence/introducing-instella-3B/README.html">Blog</a>
+							<a class="btn btn-confirm" target="_blank" href="https://github.com/AMD-AIG-AIMA/Instella">Code</a>
+							<a class="btn btn-confirm" target="_blank" href="https://huggingface.co/collections/amd/instella-67c8a2c56e9198c85a97dd08">huggingface</a>
+							<iframe src="https://ghbtns.com/github-btn.html?user=AMD-AIG-AIMA&repo=Instella&type=star&count=true&size=large" frameborder="0" scrolling="0" width="170" height="30" title="GitHub"></iframe>
+						</div>
+					</div>
+				</div>
+				
+				<div class='row publication-entity'>
+					<div class='col-xs-3'>
 						<img class="paper-image" style="width: 100%" src="images/AgentLab.png" >
 					</div>
 					<div class='col-xs-9'>
@@ -126,6 +144,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<a class="btn btn-confirm" target="_blank" href="https://arxiv.org/pdf/2501.04227">PDF</a>
 							<a class="btn btn-confirm" target="_blank" href="https://github.com/SamuelSchmidgall/AgentLaboratory">Code</a>
 							<a class="btn btn-confirm" target="_blank" href="https://agentlaboratory.github.io/">Project page</a>
+							<iframe src="https://ghbtns.com/github-btn.html?user=SamuelSchmidgall&repo=AgentLaboratory&type=star&count=true&size=large" frameborder="0" scrolling="0" width="170" height="30" title="GitHub"></iframe>
 						</div>
 					</div>
 				</div>
